<resources>
    <string name="app_name">PsyhologyRF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_glav">Ваш персональный психолог online</string>
    <string name="helloo">Привет</string>
    <string name="hellooSmile">Привет :)</string>
    <string name="question">Спросить</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="registr">Регистрация и вход</string>
    <string name="freidi">Фрейди</string>
    <string name="youName">Ваше имя</string>
    <string name="addyouName">Введите ваше имя</string>
    <string name="addyouPas">Введите пароль</string>
    <string name="addyouEmail">Введите ваш Email</string>
    <string name="registration">Регистрация</string>
    <string name="auth">Вы ещё не авторизовались</string>
    <string name="authok">Вы зарегестрированы</string>
    <string name="kakdela">Как дела?</string>
    <string name="whoyou">кто ты?</string>
    <string name="whatSkill">что умеешь?</string>
    <string name="load">загрузка данных...</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="hellothree">Приветствую</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>